--- a/index.html
+++ b/index.html
@@ -238,7 +238,17 @@ https://templatemo.com/tm-580-woox-travel
     </div>
   </section>
   <!-- ***** Main Banner Area End ***** -->
-  
+  <div id="contact">
+        <h2>Get in Touch</h2>
+        <div id="contact-form">
+                <form action="https://formspree.io/f/xpqjrebv" method="POST">
+                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="email" name="_replyto" placeholder="Your email" required>
+                <textarea name="message" placeholder="Type your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
   <div class="visit-country">
     <div class="container">
       <div class="row">
